整理下文档

--- a/00 机器学习和深度学习综述.ipynb
+++ b/00 机器学习和深度学习综述.ipynb
@@ -19,7 +19,13 @@
     "<br></br>\n",
     "\n",
     "\n",
-    "如字面含义，人工智能是研发用于模拟、延伸和扩展人的智能的理论、方法、技术及应用系统的一门新的技术科学。由于这个定义只阐述了目标，而没有限定方法，因此实现人工智能存在的诸多方法和分支，导致其变成一个“大杂烩”式的学科。\n",
+    "如字面含义，人工智能是研发用于模拟、延伸和扩展人的智能的理论、方法、技术及应用系统的一门新的技术科学。由于这个定义只阐述了目标，而没有限定方法，因此实现人工智能存在的诸多方法和分支，导致其变成一个“大杂烩”式的学科。"
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "# 机器学习\n",
     "\n",
@@ -62,7 +68,19 @@
     "\n",
     "观察实验数据不难猜测，物体的加速度$a$和作用力之间的关系应该是线性关系。因此我们提出假设 $a = w \\cdot F$，其中，$a$代表加速度，$F$代表作用力，$w$是待确定的参数。\n",
     "\n",
-    "通过大量实验数据的训练，确定参数$w$是物体质量的倒数$(1/m)$，即得到完整的模型公式$a = F \\cdot (1/m)$。当已知作用到某个物体的力时，基于模型可以快速预测物体的加速度。例如：燃料对火箭的推力$F$=10，火箭的质量$m$=2，可快速得出火箭的加速度$a$=5。\n",
+    "通过大量实验数据的训练，确定参数$w$是物体质量的倒数$(1/m)$，即得到完整的模型公式$a = F \\cdot (1/m)$。当已知作用到某个物体的力时，基于模型可以快速预测物体的加速度。例如：燃料对火箭的推力$F$=10，火箭的质量$m$=2，可快速得出火箭的加速度$a$=5。"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "### 确定模型参数\n",
     "\n",
@@ -76,7 +94,19 @@
     "<center><br>图3：确定模型参数示意图</br></center>\n",
     "<br></br>\n",
     "\n",
-    "举例类比，机器如一个机械的学生一样，只能通过尝试答对（最小化损失）大量的习题（已知样本）来学习知识（模型参数$W$），并期望用学习到的知识（模型参数$W$），组成完整的模型$H(W, X)$，回答不知道答案的考试题（未知样本）。最小化损失是模型的优化目标，实现损失最小化的方法称为优化算法，也称为寻解算法（找到使得损失函数最小的参数解）。参数$W$和输入$X$组成公式的基本结构称为假设。在牛顿第二定律的案例中，基于对数据的观测，我们提出了线性假设，即作用力和加速度是线性关系，用线性方程表示。由此可见，**模型假设、评价函数（损失/优化目标）和优化算法是构成模型的三个部分**。\n",
+    "举例类比，机器如一个机械的学生一样，只能通过尝试答对（最小化损失）大量的习题（已知样本）来学习知识（模型参数$W$），并期望用学习到的知识（模型参数$W$），组成完整的模型$H(W, X)$，回答不知道答案的考试题（未知样本）。最小化损失是模型的优化目标，实现损失最小化的方法称为优化算法，也称为寻解算法（找到使得损失函数最小的参数解）。参数$W$和输入$X$组成公式的基本结构称为假设。在牛顿第二定律的案例中，基于对数据的观测，我们提出了线性假设，即作用力和加速度是线性关系，用线性方程表示。由此可见，**模型假设、评价函数（损失/优化目标）和优化算法是构成模型的三个部分**。"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "### 模型结构介绍\n",
     "\n",
@@ -101,7 +131,13 @@
     "<center><br>图5：机器学习就是拟合一个“大公式”</br></center>\n",
     "<br></br>\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -185,7 +221,13 @@
     "\n",
     "* **大数据是神经网络发展的有效前提**。神经网络和深度学习是非常强大的模型，需要足够量级的训练数据。时至今日，之所以很多传统机器学习算法和人工特征依然是足够有效的方案，原因在于很多场景下没有足够的标记数据来支撑深度学习这样强大的模型。深度学习的能力特别像科学家阿基米德的豪言壮语：“给我一根足够长的杠杆，我能撬动地球！”。深度学习也可以发出类似的豪言：“给我足够多的数据，我能够学习任何复杂的关系”。但在现实中，足够长的杠杆与足够多的数据一样，往往只能是一种美好的愿景。直到近些年，各行业IT化程度提高，累积的数据量爆发式地增长，才使得应用深度学习模型成为可能。\n",
     "\n",
-    "* **依靠硬件的发展和算法的优化**。现阶段，依靠更强大的计算机、GPU、AutoEncoder预训练和并行计算等技术，深度学习在模型训练上的困难已经被逐渐克服。其中，数据量和硬件是更主要的原因。没有前两者，科学家们想优化算法都无从进行。\n",
+    "* **依靠硬件的发展和算法的优化**。现阶段，依靠更强大的计算机、GPU、AutoEncoder预训练和并行计算等技术，深度学习在模型训练上的困难已经被逐渐克服。其中，数据量和硬件是更主要的原因。没有前两者，科学家们想优化算法都无从进行。"
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "## 深度学习的研究和应用蓬勃发展\n",
     "\n",
@@ -202,7 +244,19 @@
     "\n",
     "<center><img src=\"https://ai-studio-static-online.cdn.bcebos.com/01d970aa13294bbda637027b98c24d0472ab8b7c2a9a4c6bb69610ec76ebdc80\" width=\"1000\" hegiht=\"\" ></center>\n",
     "<center><br>图10：以深度学习为基础的AI技术在各行业广泛应用</br></center>\n",
-    "<br></br>\n",
+    "<br></br>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "\n",
     "## 深度学习改变了AI应用的研发模式\n",
@@ -249,7 +303,13 @@
     "\n",
     "1. 类比牛顿第二定律的案例，在你的工作和生活中还有哪些问题可以用监督学习的框架来解决？模型假设和参数是什么？评价函数（损失）是什么？\n",
     "2. 为什么说深度学习工程师有发展前景？怎样从经济学（市场供需）的角度做出解读？"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
