--- a/learn_tensor.ipynb
+++ b/learn_tensor.ipynb
@@ -44,6 +44,100 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# reshape\n",
+    "- -1 表示这个维度的值是从 Tensor 的元素总数和剩余维度自动推断出来的。因此，有且只有一个维度可以被设置为 -1。\n",
+    "- 0 表示该维度的元素数量与原值相同，因此 shape 中 0 的索引值必须小于 Tensor 的维度（索引值从 0 开始计，如第 1 维的索引值是 0，第二维的索引值是 1）。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 5]\n",
+      "[3, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=paddle.zeros([3,2,5])\n",
+    "print(a.shape)\n",
+    "b=paddle.reshape(a,[0,-1])\n",
+    "print(b.shape)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Tensor的类型\n",
+    "- bool、float16、float32、float64、uint8、int8、int16、int32、int64、complex64、complex128\n",
+    "- python的int->Tensor的int64\n",
+    "- python的float->Tensor的float32\n",
+    "- 通过 Numpy 数组或其他 Tensor 创建的 Tensor，则与其原来的数据类型保持相同。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VarType.INT32\n",
+      "VarType.FP64\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=paddle.to_tensor([1])\n",
+    "print(b.dtype)\n",
+    "float32_tensor=paddle.to_tensor(1.0)\n",
+    "float64_tensor=paddle.cast(float32_tensor,dtype='float64')\n",
+    "print(float64_tensor.dtype)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.28490227] [0.2849023]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=paddle.rand((1,5))\n",
+    "y=paddle.rand((1,5))\n",
+    "dst=x.dist(y,2)\n",
+    "dst2=paddle.sqrt(paddle.sum(paddle.nn.functional.square_error_cost(x,y)))\n",
+    "print(dst.numpy(),dst2.numpy())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
