增加文档链接

--- a/使用指南/08 模型组网.ipynb
+++ b/使用指南/08 模型组网.ipynb
@@ -1,11 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "[模型组网-使用文档-PaddlePaddle深度学习平台](https://www.paddlepaddle.org.cn/documentation/docs/zh/guides/beginner/model_cn.html)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -19,7 +25,10 @@
     "import paddle\n",
     "\n",
     "print('飞桨框架内置模型：', paddle.vision.models.__all__)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
