NLLLoss和CrollEntropyLoss计算出来的结果一样

--- a/learn_cross_entry.ipynb
+++ b/learn_cross_entry.ipynb
@@ -344,6 +344,39 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nlllloss Tensor(shape=[1], dtype=float64, place=CUDAPlace(0), stop_gradient=True,\n",
+      "       [1.76475810])\n",
+      "crossentropyloss  Tensor(shape=[1], dtype=float64, place=CUDAPlace(0), stop_gradient=True,\n",
+      "       [1.76475810])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import paddle\n",
+    "import numpy as np\n",
+    "input2=paddle.to_tensor(np.array([[ 0.06601013,  0.37503667, -0.60469677,  0.68248436,  0.20264421],[-0.16129715,  0.02520340,  0.59349338,  0.51909989, -0.52911843]]))\n",
+    "labels2=paddle.to_tensor(np.array([0,1]).astype('int64'))\n",
+    "nll_loss = paddle.nn.loss.NLLLoss()\n",
+    "log_softmax = paddle.nn.LogSoftmax(axis=1)\n",
+    "_nll_loss=nll_loss(log_softmax(input2),labels2)\n",
+    "print('nlllloss',_nll_loss)\n",
+    "\n",
+    "ce_loss = paddle.nn.CrossEntropyLoss()\n",
+    "output = ce_loss(input2, labels2)\n",
+    "print('crossentropyloss ',output)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
