tf查看是否有gpu

--- a/回归拟合/tf拟合3x+1.ipynb
+++ b/回归拟合/tf拟合3x+1.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1055,24 +1051,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import tensorflow as tf\n",
+    "# tf.config.experimental.list_physical_devices()\n",
+    "# tf.config.list_physical_devices()\n",
+    "import tensorflow as tf\n",
+    "print(tf.__version__)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-11T10:14:57.089740Z",
+     "end_time": "2023-04-11T10:14:57.106735Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "is_executing": true
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "tf.test.is_gpu_available()"
+   ]
   }
  ],
  "metadata": {
