--- a/回归拟合/tf拟合3x+1.ipynb
+++ b/回归拟合/tf拟合3x+1.ipynb
@@ -1084,13 +1084,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-7-17bb7203622b>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mtf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtest\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mis_gpu_available\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32md:\\tool\\python36\\lib\\site-packages\\tensorflow\\python\\framework\\test_util.py\u001B[0m in \u001B[0;36mis_gpu_available\u001B[1;34m(cuda_only, min_cuda_compute_capability)\u001B[0m\n\u001B[0;32m    840\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    841\u001B[0m   \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 842\u001B[1;33m     \u001B[1;32mfor\u001B[0m \u001B[0mlocal_device\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mdevice_lib\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlist_local_devices\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    843\u001B[0m       \u001B[1;32mif\u001B[0m \u001B[0mlocal_device\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdevice_type\u001B[0m \u001B[1;33m==\u001B[0m \u001B[1;34m\"GPU\"\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    844\u001B[0m         if (min_cuda_compute_capability is None or\n",
+      "\u001B[1;32md:\\tool\\python36\\lib\\site-packages\\tensorflow\\python\\client\\device_lib.py\u001B[0m in \u001B[0;36mlist_local_devices\u001B[1;34m(session_config)\u001B[0m\n\u001B[0;32m     39\u001B[0m   return [\n\u001B[0;32m     40\u001B[0m       \u001B[0m_convert\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0ms\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 41\u001B[1;33m       \u001B[1;32mfor\u001B[0m \u001B[0ms\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mpywrap_tensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlist_devices\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msession_config\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0msession_config\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     42\u001B[0m   ]\n",
+      "\u001B[1;32md:\\tool\\python36\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow_internal.py\u001B[0m in \u001B[0;36mlist_devices\u001B[1;34m(session_config)\u001B[0m\n\u001B[0;32m   1709\u001B[0m                                           status)\n\u001B[0;32m   1710\u001B[0m     \u001B[1;32melse\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 1711\u001B[1;33m       \u001B[1;32mreturn\u001B[0m \u001B[0mListDevices\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mstatus\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   1712\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1713\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "tf.test.is_gpu_available()"
    ]
