一个学习例子,claude

--- a/pr_roc/one_vs_rest_classifier.ipynb
+++ b/pr_roc/one_vs_rest_classifier.ipynb
@@ -59,6 +59,36 @@
      "start_time": "2023-05-21T14:31:29.958090Z"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "这里给一个一对其余(OvR)策略的具体示例:\n",
+    "假设我们有一个3分类问题,类别为 {0, 1, 2}。我们将:\n",
+    "- 用分类器 C0 来判断样本是否属于类别 0\n",
+    "- 用分类器 C1 来判断样本是否属于类别 1\n",
+    "- 用分类器 C2 来判断样本是否属于类别 2\n",
+    "那么 OvR 策略的训练过程如下:\n",
+    "1. 收集所有样本,标记属于类别 0 的样本的输出为 1,其余类别的样本输出为 0。用这些样本训练 C0。\n",
+    "2. 收集所有样本,标记属于类别 1 的样本的输出为 1,其余类别的样本输出为 0。用这些样本训练 C1。\n",
+    "3. 收集所有样本,标记属于类别 2 的样本的输出为 1,其余类别的样本输出为 0。用这些样本训练 C2。\n",
+    "4. 得到 3 个分类器 C0,C1 和 C2。\n",
+    "这样,每个分类器都可以判断样本是否属于对应的类别。\n",
+    " prediction 的过程如下:\n",
+    "1. 将样本输入到 C0,若 C0 输出为 1,则预测该样本属于类别 0。否则,执行步骤 2。\n",
+    "2. 将样本输入到 C1,若 C1 输出为 1,则预测该样本属于类别 1。否则,执行步骤 3。\n",
+    "3. 将样本输入到 C2,若 C2 输出为 1,则预测该样本属于类别 2。否则,无法判断该样本属于哪个类别。\n",
+    "举例:\n",
+    "样本:输入特征为 [0.1, 0.3]\n",
+    "1. 输入到 C0,C0 输出 0,不是类别 0\n",
+    "2. 输入到 C1,C1 输出 1,预测为类别 1\n",
+    "3. 不需要执行步骤 3 了\n",
+    "所以,对于这个样本,使用 OvR 策略预测其类别为 1。\n",
+    "这个过程首先用每个分类器判断样本是否属于对应的类别,如果是则停止判断并预测为该类别,如果否则继续判断下一个分类器,直到找到类别或判断完所有分类器。"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
