roc中多分类时 one vs rest研究

--- a/pr_roc/one_vs_rest_classifier.ipynb
+++ b/pr_roc/one_vs_rest_classifier.ipynb
@@ -55,8 +55,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-21T14:31:30.678866200Z",
-     "start_time": "2023-05-21T14:31:29.958090Z"
+     "end_time": "2023-05-22T13:08:00.114433700Z",
+     "start_time": "2023-05-22T13:07:59.097435300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-1.00647404, -1.00726187,  1.01544169],\n       [ 0.83428719, -0.89156263, -1.03394177],\n       [-0.98040546,  0.74960401, -0.99948507]])"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_score=clf.decision_function([[-19, -20], [9, 9], [-5, 5]])\n",
+    "y_score #属于各类的概率"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-22T13:09:02.277951500Z",
+     "start_time": "2023-05-22T13:09:02.238954600Z"
     }
    }
   },
