--- a/pr_roc/单分类_roc.ipynb
+++ b/pr_roc/单分类_roc.ipynb
@@ -34,9 +34,13 @@
     "from sklearn import metrics\n",
     "y = np.array([1, 1, 2, 2])\n",
     "pred = np.array([0.1, 0.4, 0.35, 0.8])\n",
-    "#0.8 0.4 0.35 0.1\n",
-    "# 2  1     2  1\n",
-    "fpr, tpr, thresholds = metrics.roc_curve(y, pred, pos_label=2)\n",
+    "#   1.8  0.8 0.4 0.35 0.1\n",
+    "#         2   1    2  1\n",
+    "#         正  负    正  负\n",
+    "# tpr 0   0.5 0.5  1  1\n",
+    "# fpr 0    0  0.5  0.5 1\n",
+    "fpr, tpr, thresholds = metrics.roc_curve(y, pred, pos_label=2) # 值为2是正值标签\n",
+    "# 概率最大为0.8，所以选一个大于0.8就行，这里threshold选的1.8，然后是0.8 0.4 0.35 0.1\n",
     "print(fpr,tpr,thresholds)\n",
     "metrics.auc(fpr, tpr)"
    ],
