bard的一个计算例子

--- a/pr_roc/已知prob、label和阈值计算tpr和fpr.ipynb
+++ b/pr_roc/已知prob、label和阈值计算tpr和fpr.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-22T14:04:23.672938Z",
+     "start_time": "2023-05-22T14:04:23.319938600Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -55,18 +62,14 @@
     "tpr, fpr = calculate_tpr_fpr(data, thresholds)\n",
     "print(\"TPR:\", tpr)\n",
     "print(\"FPR:\", fpr)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-22T14:04:23.672938Z",
-     "start_time": "2023-05-22T14:04:23.319938600Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# claude\n",
@@ -107,10 +110,79 @@
     "#[1.0, 0.66667, 0.5]\n",
     "print(fpr_list)\n",
     "#[0.8,  0.4, 0.2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.0]\n",
+      "[0.5, 0.0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+     ]
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "# bard\n",
+    "import pandas as pd\n",
+    "\n",
+    "def calculate_tpr_fpr(df, t, label_col='label', prob_col='prob'):\n",
+    "  \"\"\"\n",
+    "  Calculates the true positive rate (TPR) and false positive rate (FPR) for a list of thresholds.\n",
+    "\n",
+    "  Args:\n",
+    "    df: A Pandas DataFrame.\n",
+    "    t: A list of thresholds.\n",
+    "    label_col: The name of the column in df that contains the labels.\n",
+    "    prob_col: The name of the column in df that contains the probabilities.\n",
+    "\n",
+    "  Returns:\n",
+    "    A tuple of TPR and FPR.\n",
+    "  \"\"\"\n",
+    "\n",
+    "  # Sort the probabilities.\n",
+    "  df = df.sort_values(by=prob_col)\n",
+    "\n",
+    "  # Initialize the TPR and FPR.\n",
+    "  tpr = []\n",
+    "  fpr = []\n",
+    "\n",
+    "  # Iterate over the thresholds.\n",
+    "  for threshold in t:\n",
+    "    # Calculate the true positive and false positive counts.\n",
+    "    true_positives = len(df[df[label_col] == 1][df[prob_col] >= threshold])\n",
+    "    false_positives = len(df[df[label_col] == 0][df[prob_col] >= threshold])\n",
+    "\n",
+    "    # Calculate the TPR and FPR.\n",
+    "    tpr.append(true_positives / len(df[df[label_col] == 1]))\n",
+    "    fpr.append(false_positives / len(df[df[label_col] == 0]))\n",
+    "\n",
+    "  return tpr, fpr\n",
+    "\n",
+    "df = pd.DataFrame({'label': [0, 0, 1, 1], 'prob': [0.1, 0.2, 0.3, 0.4]})\n",
+    "t = [0.2, 0.3]\n",
+    "\n",
+    "tpr, fpr = calculate_tpr_fpr(df, t)\n",
+    "\n",
+    "print(tpr)\n",
+    "# [0.5, 1.0]\n",
+    "\n",
+    "print(fpr)"
+   ]
   }
  ],
  "metadata": {
@@ -122,14 +194,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8rc1"
   }
  },
  "nbformat": 4,
