整理下计算tpr、fpr代码，模仿代码算下试试

--- a/pr_roc/已知prob、label和阈值计算tpr和fpr.ipynb
+++ b/pr_roc/已知prob、label和阈值计算tpr和fpr.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-22T14:04:23.672938Z",
-     "start_time": "2023-05-22T14:04:23.319938600Z"
-    },
-    "collapsed": false
+     "end_time": "2023-05-23T13:03:44.041204900Z",
+     "start_time": "2023-05-23T13:03:43.555092800Z"
+    }
    },
    "outputs": [
     {
@@ -66,121 +66,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2023-05-23T13:12:40.674372700Z",
+     "start_time": "2023-05-23T13:12:40.640373Z"
+    }
    },
-   "outputs": [],
-   "source": [
-    "# claude\n",
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame({\n",
-    "    'label': [0, 1, 0, 1, 0, 1],\n",
-    "    'prob': [0.1, 0.4, 0.35, 0.8, 0.2, 0.7]\n",
-    "})\n",
-    "\n",
-    "t = [0.8, 0.5, 0.3]  # 阈值列表\n",
-    "\n",
-    "# 根据prob列从大到小排序\n",
-    "df = df.sort_values('prob', ascending=False)\n",
-    "\n",
-    "# 初始化结果列表\n",
-    "tpr_list = []\n",
-    "fpr_list = []\n",
-    "\n",
-    "# 遍历各个阈值\n",
-    "for threshold in t:\n",
-    "\n",
-    "    # 获取prob大于等于阈值的行索引\n",
-    "    prob_index = df[df['prob'] >= threshold].index\n",
-    "\n",
-    "    # 获取这些行的label列的值\n",
-    "    label = df.loc[prob_index, 'label']\n",
-    "\n",
-    "    # 计算tpr和fpr\n",
-    "    tpr = sum(label) / sum(df['label'])\n",
-    "    fpr = 1 - sum(~label) / sum(~df['label'])\n",
-    "\n",
-    "    # 添加到结果列表\n",
-    "    tpr_list.append(tpr)\n",
-    "    fpr_list.append(fpr)\n",
-    "\n",
-    "print(tpr_list)\n",
-    "#[1.0, 0.66667, 0.5]\n",
-    "print(fpr_list)\n",
-    "#[0.8,  0.4, 0.2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.0, 1.0]\n",
-      "[0.5, 0.0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:28: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "d:\\tool\\Python36\\lib\\site-packages\\ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+      "[0.0, 0.5, 0.5, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.5, 0.5, 0.5, 1.0]\n"
      ]
     }
    ],
    "source": [
-    "# bard\n",
-    "import pandas as pd\n",
+    "# new bing\n",
+    "import numpy as np\n",
+    "def roc_curve(y_true, y_prob, thresholds):\n",
+    "    fpr = []\n",
+    "    tpr = []\n",
+    "    for threshold in thresholds:\n",
+    "        y_pred = np.where(y_prob >= threshold, 1, 0) # assign 1 if prob >= threshold, else 0\n",
+    "        fp = np.sum((y_true == 0)&(y_pred == 1)) # false positives\n",
+    "        tp = np.sum((y_true == 1)&(y_pred == 1)) # true positives\n",
+    "        fn = np.sum((y_true == 1)&(y_pred == 0)) # false negatives\n",
+    "        tn = np.sum((y_true == 0)&(y_pred == 0)) # true negatives\n",
     "\n",
-    "def calculate_tpr_fpr(df, t, label_col='label', prob_col='prob'):\n",
-    "  \"\"\"\n",
-    "  Calculates the true positive rate (TPR) and false positive rate (FPR) for a list of thresholds.\n",
+    "        fpr.append(fp / (fp + tn)) # false positive rate\n",
+    "        tpr.append(tp / (tp + fn)) # true positive rate\n",
+    "    return [fpr, tpr]\n",
     "\n",
-    "  Args:\n",
-    "    df: A Pandas DataFrame.\n",
-    "    t: A list of thresholds.\n",
-    "    label_col: The name of the column in df that contains the labels.\n",
-    "    prob_col: The name of the column in df that contains the probabilities.\n",
+    "data = pd.DataFrame({'label': [0, 1, 0, 1], 'prob': [0.1, 0.8, 0.4, 0.6]})\n",
+    "t = [0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1]\n",
     "\n",
-    "  Returns:\n",
-    "    A tuple of TPR and FPR.\n",
-    "  \"\"\"\n",
-    "\n",
-    "  # Sort the probabilities.\n",
-    "  df = df.sort_values(by=prob_col)\n",
-    "\n",
-    "  # Initialize the TPR and FPR.\n",
-    "  tpr = []\n",
-    "  fpr = []\n",
-    "\n",
-    "  # Iterate over the thresholds.\n",
-    "  for threshold in t:\n",
-    "    # Calculate the true positive and false positive counts.\n",
-    "    true_positives = len(df[df[label_col] == 1][df[prob_col] >= threshold])\n",
-    "    false_positives = len(df[df[label_col] == 0][df[prob_col] >= threshold])\n",
-    "\n",
-    "    # Calculate the TPR and FPR.\n",
-    "    tpr.append(true_positives / len(df[df[label_col] == 1]))\n",
-    "    fpr.append(false_positives / len(df[df[label_col] == 0]))\n",
-    "\n",
-    "  return tpr, fpr\n",
-    "\n",
-    "df = pd.DataFrame({'label': [0, 0, 1, 1], 'prob': [0.1, 0.2, 0.3, 0.4]})\n",
-    "t = [0.2, 0.3]\n",
-    "\n",
-    "tpr, fpr = calculate_tpr_fpr(df, t)\n",
+    "fpr, tpr = roc_curve(data['label'],data['prob'],t)\n",
     "\n",
     "print(tpr)\n",
-    "# [0.5, 1.0]\n",
+    "print(fpr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-23T13:15:07.251204200Z",
+     "start_time": "2023-05-23T13:15:07.180206500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.5, 0.5, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.5, 0.5, 0.5, 1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new bing2\n",
     "\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "def roc2(y_true,y_prob,thresholds):\n",
+    "    thresholds = t # list of thresholds from large to small\n",
+    "    fpr = []\n",
+    "    tpr = []\n",
+    "    for threshold in thresholds:\n",
+    "        y_pred = np.where(y_prob >= threshold, 1, 0) # assign 1 if prob >= threshold, else 0\n",
+    "        cm = confusion_matrix(y_true, y_pred) # confusion matrix\n",
+    "        fp = cm[0][1] # false positives\n",
+    "        tp = cm[1][1] # true positives\n",
+    "        fn = cm[1][0] # false negatives\n",
+    "        tn = cm[0][0] # true negatives\n",
+    "        fpr.append(fp / (fp + tn)) # false positive rate\n",
+    "        tpr.append(tp / (tp + fn)) # true positive rate\n",
+    "    return tpr,fpr\n",
+    "\n",
+    "df = pd.DataFrame({'label': [0, 1, 0, 1], 'prob': [0.1, 0.8, 0.4, 0.6]})\n",
+    "t = [0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1]\n",
+    "y_true = df['label'] # true binary labels\n",
+    "y_prob = df['prob'] # probability estimates of the positive class\n",
+    "tpr,fpr=roc2(y_true,y_prob,thresholds)\n",
+    "\n",
+    "print(tpr)\n",
     "print(fpr)"
    ]
   }
@@ -201,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8rc1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
